need to commit here

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 <body>
 
   <header>
-    <div class="container">
-      <h1 class= "logo" flicker>LineCAM-Operator Page     </h1>   
-      <p class="hero-text" flicker></p>
+    <div class="container2">
+      <h1 class= "logo">
+      <img src="https://practiz2023public.blob.core.windows.net/train-dataset/robot-9.png" alt="Logo">
+      </h1>   
+      <p class="hero-text" flicker> </p>
       <ul class="menu">
       </ul>
     </div>
@@ -32,8 +34,8 @@
           </video>
         </div>
         <div class="button-container">
-          <button id="on-button" class="active-button">ON</button>
-          <button id="off-button" class="inactive-button">OFF</button>
+          <button id="on-button" class = "btn" class="active-button">ON</button>
+          <button id="off-button" class = "btn"class="inactive-button">OFF</button>
         </div>
       </div>
     </div>
