--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
   <meta charset="utf-8">
   <title>LineCAM-Operator Page</title>
   <link rel="stylesheet" href="styles.css">
-  <script>
-    var BotStar = {appId:"s9edc3990-cea2-11ed-afee-918b64365252", mode:"livechat"};
-    !function(t,a){var e=function(){(e.q=e.q||[]).push(arguments)};e.q=e.q||[],t.BotStarApi=e;!function(){var t=a.createElement("script");t.type="text/javascript",t.async=1,t.src="https://widget.botstar.com/static/js/widget.js";var e=a.getElementsByTagName("script")[0];e.parentNode.insertBefore(t,e)}();}(window,document)
-  </script>
 
 </head>
 
@@ -49,6 +45,27 @@
   </footer>
 
   <script src="./app.js" type = "text/javascript"></script>
+  <script>
+    var BotStar = {
+            appId: "s9edc3990-cea2-11ed-afee-918b64365252", // required
+            mode: "livechat",
+            user: {
+            user_id: "Simon123",
+            email: "simon123@user.email",
+            first_name: "Simon",
+            last_name: "Chen",
+            name: "Operator Simon"
+            another_attribute: "New value"
+            },
+            variables: {
+            employee_ID: "The Witcher",
+            company_name: "ABC Medical Device Company"
+            },
+            block: "s725ba8ab-1eea-4a95-b82b-940dad1a57c6"
+        };
+    !function(t,a){var e=function(){(e.q=e.q||[]).push(arguments)};e.q=e.q||[],t.BotStarApi=e;!function(){var t=a.createElement("script");t.type="text/javascript",t.async=1,t.src="https://widget.botstar.com/static/js/widget.js";var e=a.getElementsByTagName("script")[0];e.parentNode.insertBefore(t,e)}();}(window,document)
+  </script>
+
 </body>
 </html>
 
